--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -19,6 +19,7 @@
     />
 
     <ImageView
+            android:id="@+id/app_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/banner"
@@ -26,6 +27,17 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
     />
+
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_signInBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/app_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:stateListAnimator="@null">
+
+    </com.google.android.gms.common.SignInButton>
 
     <Button
             android:id="@+id/btn_register"
