--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/Crimson"
+                android:background="@color/White"
 >
 
     <TextView
@@ -20,9 +20,9 @@
 
     <ImageView
             android:id="@+id/app_logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:src="@drawable/banner"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -48,7 +48,7 @@
             android:stateListAnimator="@null"
             android:paddingLeft="100dp"
             android:paddingRight="100dp"
-
+            android:visibility="gone"
             android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
             android:layout_marginBottom="40dp"
     />
