--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center"
-            android:visibility="gone"
+            android:visibility="visible"
     >
 
         <LinearLayout
@@ -103,7 +103,7 @@
 
             <Button
                     android:id="@+id/btn_verify_number"
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/white_stroke"
                     android:text="Verify Number"
